finish colors for profile.html mobile, fixed minor color issues on other pages, introduced --color-11 for a contrast tan color on light theme

--- a/kokoro_app/static/kokoro_app/styles.css
+++ b/kokoro_app/static/kokoro_app/styles.css
@@ -35,6 +35,7 @@ body {
     --color-8:#043052; /* brand green / midnight-blue */
     --color-9:#FFFFFF; /* brand green / white */
     --color-10:#05406D; /* super-light-green / light-blue */
+    --color-11:#F5A52D; /* dark-tan / tan */
     --color-svg:#49BB49; /* brand-green */
     --color-svg-shadow:#F5A52D; /* based-off wave color (light-green / tan) */
 
@@ -52,6 +53,7 @@ body {
     --color-8:#49BB49
     --color-9:#49BB49
     --color-10:#96FFA1
+    --color-11:#9A5A00
     --color-svg: (unchanged)
     --color-svg-shadow: #A2FF98
     */
@@ -1066,7 +1068,7 @@ svg text {
 .profile-contact {
     margin-top: .5rem;
     font-size: 15px;
-    color: var(--color-4);
+    color: var(--color-11);
 }
 
 .write-post-btn {
@@ -1121,7 +1123,7 @@ svg text {
     display: block;
     text-align: right;
     font-family: 'Playfair Display', serif;
-    color: #F5A52D; /* same for both themes */
+    color: var(--color-11); /* same for both themes */
     padding: .5rem 1rem 0 1rem;
 }
 
@@ -1295,6 +1297,7 @@ svg text {
     border-radius: 8px;
     margin-bottom: .5rem;
     background-color: var(--color-2);
+    border: 1px solid var(--color-8);
     padding: .5rem;
 }
 
@@ -1381,6 +1384,7 @@ svg text {
     border-radius: 8px;
     margin-bottom: .5rem;
     background-color: var(--color-2);
+    border: 1px solid var(--color-8);
     padding: .5rem;
 }
 
@@ -1393,6 +1397,7 @@ svg text {
     border-radius: 8px;
     margin-bottom: .5rem;
     background-color: var(--color-2);
+    border: 1px solid var(--color-8);
     padding: .5rem;
 }
 
@@ -1596,7 +1601,7 @@ svg text {
 
 .write-header {
     display: block;
-    color: lightgray;
+    color: var(--color-7);
 }
 
 /* access django form */
@@ -1605,7 +1610,7 @@ svg text {
     outline: none;
     width: 100%;
     margin-bottom: 2rem;
-    border: 2px solid var(--color-2);
+    border: 1px solid var(--color-8);
     border-radius: 4px;
     outline: none;
     background-color: var(--color-1);
@@ -1620,7 +1625,7 @@ svg text {
     outline: none;
     width: 100%;
     margin-bottom: 1rem;
-    border: 2px solid var(--color-2);
+    border: 1px solid var(--color-8);
     border-radius: 4px;
     background-color: var(--color-1);
     color: var(--color-5);
@@ -2043,7 +2048,6 @@ svg text {
 
     .profile-contact span {
         font-size: 18px;
-        color: var(--color-4);
     }
 
     .friendship-btn-submit, .write-post-btn-submit {
